--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,9 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==4.2.18
+idna==3.10
+psycopg2-binary==2.9.10
+requests==2.32.3
 sqlparse==0.5.3
+urllib3==2.3.0
