--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,9 +1,36 @@
+amqp==5.3.1
+anyio==4.8.0
+APScheduler==3.6.3
 asgiref==3.8.1
+billiard==4.2.1
+cachetools==4.2.2
+celery==5.4.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==4.2.18
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+kombu==5.4.2
+prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+python-dateutil==2.9.0.post0
+pytz==2025.1
+redis==5.2.1
 requests==2.32.3
+setuptools==75.8.0
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+tornado==6.1
+typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.2
 urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
