--- a/example.env
+++ b/example.env
@@ -4,5 +4,8 @@ POSTGRES_DB=db
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 SECRET_KEY=izr*z9=%fidp7p2cueju7iulv$u$cav3m2=^!2h!c=uhjb^%^^
 DEBUG=0
