--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,7 +11,7 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-Django==4.2.18
+Django==4.2.*
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
