--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -11,7 +11,9 @@ click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
-Django==4.2.*
+cron-descriptor==1.4.5
+Django==4.2.18
+django-timezone-field==7.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -19,6 +21,7 @@ idna==3.10
 kombu==5.4.2
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2025.1
 redis==5.2.1
