--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -14,11 +14,13 @@ click-repl==0.3.0
 cron-descriptor==1.4.5
 Django==4.2.18
 django-timezone-field==7.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
 kombu==5.4.2
+packaging==24.2
 prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
 python-crontab==3.2.0
