--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -19,6 +19,8 @@ django-timezone-field==7.1
 django-unfold==0.47.0
 exceptiongroup==1.2.2
 flake8==7.1.1
+fontawesomefree==6.6.0
+freezegun==1.5.1
 gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
